# ordhook

./: .eslintignore  .eslintrc.js  .eslintrc.json  .gitattributes  .gitignore  .prettierrc.json  .releaserc  CHANGELOG.md  Cargo.toml  Dockerfile  Ordhook.toml  README.md  ordhook.code-workspace  package-lock.json  package.json  rollup.config.dap.js  rollup.config.lsp.js  tsconfig.json
.cargo/: config  config.toml
components/chainhook-cli/: Cargo.toml  README.md
components/chainhook-cli/benches/codec/: clarity.rs  hex.rs
components/chainhook-cli/benches/storage/: redis.rs
components/chainhook-cli/examples/arkadiko-data-indexing/: README.md  arkadiko.json
components/chainhook-cli/src/: main.rs
components/chainhook-cli/src/archive/: mod.rs
components/chainhook-cli/src/block/: digestion.rs  ingestion.rs  mod.rs
components/chainhook-cli/src/cli/: mod.rs
components/chainhook-cli/src/config/: file.rs  generator.rs  mod.rs
components/chainhook-cli/src/hord/: mod.rs
components/chainhook-cli/src/node/: mod.rs
components/chainhook-cli/src/ordinals/: chain.rs  deserialize_from_str.rs  epoch.rs  height.rs  inscription_id.rs  mod.rs  sat.rs  sat_point.rs
components/chainhook-cli/src/ordinals/indexing/: entry.rs  mod.rs  rtx.rs  updater.rs
components/chainhook-cli/src/scan/: bitcoin.rs  mod.rs  stacks.rs
components/chainhook-cli/src/service/: http_api.rs  mod.rs  runloops.rs
components/chainhook-cli/src/storage/: mod.rs
components/chainhook-event-observer/: Cargo.toml  Observer.toml
components/chainhook-event-observer/doc/: openapi.json
components/chainhook-event-observer/src/: lib.rs  main.rs
components/chainhook-event-observer/src/chainhooks/: types.rs
components/chainhook-event-observer/src/chainhooks/bitcoin/: mod.rs
components/chainhook-event-observer/src/chainhooks/stacks/: mod.rs
components/chainhook-event-observer/src/hord/: inscription.rs  mod.rs
components/chainhook-event-observer/src/hord/db/: mod.rs
components/chainhook-event-observer/src/hord/ord/: epoch.rs  mod.rs  sat.rs
components/chainhook-event-observer/src/indexer/: fork_scratch_pad.rs  mod.rs
components/chainhook-event-observer/src/indexer/bitcoin/: mod.rs  tests.rs
components/chainhook-event-observer/src/indexer/ordinals/: blocktime.rs  chain.rs  epoch.rs  inscription.rs  inscription_id.rs  mod.rs  sat.rs
components/chainhook-event-observer/src/indexer/stacks/: blocks_pool.rs  mod.rs
components/chainhook-event-observer/src/indexer/tests/: mod.rs
components/chainhook-event-observer/src/observer/: endpoints.rs  http.rs  mod.rs
components/chainhook-event-observer/src/observer/tests/: mod.rs
components/chainhook-event-observer/src/utils/: mod.rs
components/chainhook-sdk/: Cargo.toml
components/chainhook-sdk/src/: lib.rs
components/chainhook-sdk/src/chainhooks/: types.rs
components/chainhook-sdk/src/chainhooks/bitcoin/: mod.rs
components/chainhook-sdk/src/chainhooks/stacks/: mod.rs
components/chainhook-sdk/src/hord/: mod.rs
components/chainhook-sdk/src/hord/db/: mod.rs
components/chainhook-sdk/src/hord/ord/: mod.rs
components/chainhook-sdk/src/indexer/: mod.rs
components/chainhook-sdk/src/indexer/bitcoin/: blocks_pool.rs  mod.rs  tests.rs
components/chainhook-sdk/src/indexer/stacks/: blocks_pool.rs  mod.rs
components/chainhook-sdk/src/indexer/tests/: mod.rs
components/chainhook-sdk/src/observer/: http.rs  mod.rs
components/chainhook-sdk/src/observer/tests/: mod.rs
components/chainhook-types-rs/: Cargo.toml
components/chainhook-types-rs/src/: bitcoin.rs  lib.rs  processors.rs  rosetta.rs
components/ordhook-cli/: Cargo.toml  build.rs
components/ordhook-cli/src/: main.rs
components/ordhook-cli/src/cli/: mod.rs
components/ordhook-cli/src/config/: file.rs  generator.rs  mod.rs
components/ordhook-cli/src/core/: mod.rs
components/ordhook-cli/src/core/pipeline/: mod.rs
components/ordhook-cli/src/db/: mod.rs
components/ordhook-cli/src/ord/: mod.rs  sat.rs  sat_point.rs
components/ordhook-cli/src/scan/: bitcoin.rs
components/ordhook-cli/src/service/: mod.rs  runloops.rs
components/ordhook-core/: Cargo.toml
components/ordhook-core/src/: lib.rs
components/ordhook-core/src/config/: mod.rs
components/ordhook-core/src/core/: mod.rs
components/ordhook-core/src/db/: mod.rs
components/ordhook-core/src/download/: mod.rs
components/ordhook-core/src/ord/: chain.rs  envelope.rs  epoch.rs  inscription.rs  inscription_id.rs  media.rs  mod.rs  sat.rs
components/ordhook-core/src/scan/: bitcoin.rs
components/ordhook-core/src/service/: http_api.rs  mod.rs  observers.rs  predicates.rs  runloops.rs
components/ordhook-core/src/utils/: bitcoind.rs  logger.rs  mod.rs
components/ordhook-sdk-js/: .npmignore  Cargo.toml  README.md  index.d.ts  index.js  package-lock.json  package.json
components/ordhook-sdk-js/__test__/: index.spec.mjs
components/ordhook-sdk-js/lib/: index.ts  test.ts
components/ordhook-sdk-js/npm/android-arm-eabi/: README.md  package.json
components/ordhook-sdk-js/npm/android-arm64/: README.md  package.json
components/ordhook-sdk-js/npm/darwin-arm64/: README.md  package.json
components/ordhook-sdk-js/npm/darwin-universal/: README.md  package.json
components/ordhook-sdk-js/npm/darwin-x64/: README.md  package.json
components/ordhook-sdk-js/npm/freebsd-x64/: README.md  package.json
components/ordhook-sdk-js/npm/linux-arm-gnueabihf/: README.md  package.json
components/ordhook-sdk-js/npm/linux-arm64-gnu/: README.md  package.json
components/ordhook-sdk-js/npm/linux-arm64-musl/: README.md  package.json
components/ordhook-sdk-js/npm/linux-x64-gnu/: README.md  package.json
components/ordhook-sdk-js/npm/linux-x64-musl/: README.md  package.json
components/ordhook-sdk-js/npm/win32-arm64-msvc/: README.md  package.json
components/ordhook-sdk-js/npm/win32-ia32-msvc/: README.md  package.json
components/ordhook-sdk-js/npm/win32-x64-msvc/: README.md  package.json
components/ordhook-sdk-js/src/: lib.rs  ordinals_indexer.rs
components/ordhook-sdk-js/src/serde/: errors.rs  ser.rs
debug/: debug.js
(+247 files in other folders)
