[package]
name = "clarity-lsp"
description = "Clarity Language Server"
version = "0.4.0"
authors = ["Ludo Galabru <ludovic@galabru.com>"]
readme = "README.md"
edition = "2018"
license = "GPL-3.0-only"
keywords = ["blockstack", "blockchain", "clarity", "smart-contract", "lsp"]
exclude = ["vs-client/**"]
homepage = "https://github.com/hirosystems/clarity-lsp"
repository = "https://github.com/hirosystems/clarity-lsp"
categories = ["command-line-utilities", "development-tools", "development-tools::build-utils"]

[workspace]
members = [".", "xtask/"]

[dependencies]
tower-lsp = "0.13.3"
lazy_static = "1.4.0"
serde_json = "1.0.47"
tokio = { version = "0.2", features = ["rt-core", "macros", "io-std"] }
tokio-util = { version = "0.3", features = ["codec"] }
regex = "1.3.4"
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.8.1"
# clarity_repl = { package = "clarity-repl", path = "../clarity-repl" }
clarity_repl = { package = "clarity-repl", version = "0.12.4", features = ["cli"] }

[profile.dev]
debug = 0

[profile.release]
incremental = true
debug = 0
