[package]
edition = "2021"
name = "ordhook-sdk-js"
version = "0.6.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4", "async", "tokio_rt", "serde-json"] }
napi-derive = "2.12.2"
crossbeam-channel = "0.5.6"
ordhook = { path = "../ordhook-core" }
hiro-system-kit = "0.3.1"
serde_json = "1"
serde = "1"

[build-dependencies]
napi-build = "2.0.1"

# [build]
# target = "armv7-unknown-linux-gnueabihf"
# rustflags = ["-C", "link-args=-L/lib/arm-linux-gnueabihf"]

# [target.armv7-unknown-linux-gnueabihf]
# linker = "arm-linux-gnueabihf-g++"

# [profile.release]
# lto = true
